@@ -12,8 +12,10 @@ errorIndication, errorStatus, errorIndex, \
 #    cmdgen.CommunityData('public'),
     # SNMP v3
     cmdgen.UsmUserData('test-user', 'authkey1', 'privkey1'),
-    # Transport
+    # Transport options
     cmdgen.UdpTransportTarget(('localhost', 161)),
+#    cmdgen.Udp6TransportTarget(('::1', 161)),
+#    cmdgen.UnixTransportTarget('/tmp/snmp-agent'),
     # Request variable(s)
 #    (('TCP-MIB', ''),),
     (('SNMPv2-MIB', ''),),
