@@ -5,6 +5,8 @@ Revision 4.2.3
   to an authoritative SNMP engineinbound against auth/priv protocols
   configured for the user in question. That allowed unauthenticated/unciphered
   access to pysnmp-based Agent even if USM user is configured to provide one.
+- IPv6/UDP and Local Domain Socket transport interfaces added to the
+  oneliner API.
 - Mib Instrumentation subsystem re-worked to get rid of an excessive
   unpublished MIB values smiCreate()/smiWrite()/smiDestroy() methods.
 - MibTree.readTest[Get]Next() reworked to be called uniformely so
